--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swiper-button-disabled {
+    @apply opacity-0 pointer-events-none;
+  }
+  
